--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,6 +56,8 @@
   body {
     @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
+    background-color: #19263c;
+    color: #ffffff;
   }
 }
 
